--- a/client/bower.json
+++ b/client/bower.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "angular": "^1.5.8",
     "angular-route": "^1.5.8",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "angular-cookies": "^1.5.8"
   }
 }
